Emacs - Fix bookmark-set keybinding
Now using original for mpdel.

--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -1709,7 +1709,7 @@ Don't backup remote directories or encrypted files."
 ** Bookmarks
 #+begin_src emacs-lisp
 (general-s
-  "m" #'bookmark-set
+  "M" #'bookmark-set
   "'" #'bookmark-jump)
 #+end_src
 
